--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   broker:
     image: eclipse-mosquitto:2
@@ -28,3 +26,13 @@ services:
     build: ./services/digital-twin-api
     ports:
       - "8000:8000"
+
+  alerting-service:
+    build: ./services/alerting-service
+    ports:
+      - "8003:8000"
+
+  data-aggregator:
+    build: ./services/data-aggregator
+    ports:
+      - "8004:8000"
